// Use these for links to issue and pulls. Note issues and pulls redirect one to
// each other on Github, so don't worry too much on using the right prefix.
:issue: https://github.com/elastic/apm-agent-python/issues/
:pull: https://github.com/elastic/apm-agent-python/pull/

[[changelog]]
== Changelog

[[release-next]]
[float]
=== Unreleased
https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...master[Check the HEAD diff]


 * added a background thread to process the transactions queue every 60 seconds (configurable) ({pull}68[#68])
 * adapted trace context for SQL traces to new API ({pull}77[#77])

[[release-v1.0.0.dev2]]
[float]
=== v1.0.0.dev2

https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev1\...v1.0.0.dev2[Check the diff]

 * added request context information for Flask ({pull}58[#58])
 * added response context information for Flask ({pull}65[#65])
 * BREAKING: changed the `SERVERS` list setting to a single `SERVER` string setting.
   With this change, we now only support sending events to a single server ({pull}59[#59])
 * BREAKING: removed root trace. Due to historical reason, we used to create a "root trace" which was equivalent
   to the transaction. This is no longer necessary. {pull}61[#61]

[[release-v1.0.0.dev1]]
[float]
=== v1.0.0.dev1

https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev0\...v1.0.0.dev1[Check the diff]

 * unified configuration across supported frameworks ({pull}33[#33])
 * added in-app frame detection ({pull}36[#36])
 * added tagging functionality ({pull}28[#28])
 * preliminary support for Django 2.0 ({pull}26[#26])
 * initial set of documentation

[[release-v1.0.0.dev0]]
[float]
=== v1.0.0.dev0

First release of the Python agent for Elastic APM